TEST_PROGRAMS/INVALID/remi_bernard/var.min
# Expression as variable name
var x+1: int;

